--- a/src/assets/components/SimpleSlider/SimpleSlider.css
+++ b/src/assets/components/SimpleSlider/SimpleSlider.css
@@ -32,9 +32,11 @@
 
 @media only screen and (min-width: 1024px) {
     .carousel-section {
-        width: 1190px;
-        margin: 45px 0 67.2px 195px;
+        width: 1100px;
+        margin: 45px auto;
+        padding-left: 50px;
     }
+
     .carousel-div .carousel-div-links img {
         width: 81.1px;
         height: 81.1px;
