--- a/src/assets/components/Header/Header.css
+++ b/src/assets/components/Header/Header.css
@@ -31,9 +31,9 @@
     width: 50%;
 }
 
-.header .xdt {
-    width: 50%;
+.header .xt {
     display: flex;
+    width: 30%;
     justify-content: space-between;
     align-items: center;
 }
@@ -49,20 +49,6 @@
     line-height: 1.3;
     letter-spacing: normal;
     text-align: center;
-    color: #2e1018;
-}
-
-.header .discord {
-    text-decoration: none;
-    width: 57px;
-    font-family: "Cairo", sans-serif;
-    font-size: 17.9px;
-    font-weight: 500;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.3;
-    letter-spacing: normal;
-    text-align: left;
     color: #2e1018;
 }
 
@@ -106,7 +92,7 @@
         width: 50%;
     }
 
-    .header .xdt {
+    .header .xt {
         width: 300px;
     }
 
